@@ -20,16 +20,14 @@
 package org.elasticsearch.action.admin.cluster.remote;
 
 import org.elasticsearch.action.ActionResponse;
-import org.elasticsearch.transport.RemoteConnectionInfo;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.common.xcontent.ToXContentObject;
 import org.elasticsearch.common.xcontent.XContentBuilder;
+import org.elasticsearch.transport.RemoteConnectionInfo;
 
 import java.io.IOException;
-import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public final class RemoteInfoResponse extends ActionResponse implements ToXContentObject {
@@ -40,7 +38,11 @@ public final class RemoteInfoResponse extends ActionResponse implements ToXConte
     }
 
     RemoteInfoResponse(Collection<RemoteConnectionInfo> infos) {
-        this.infos = Collections.unmodifiableList(new ArrayList<>(infos));
+        this.infos = List.copyOf(infos);
+    }
+
+    public List<RemoteConnectionInfo> getInfos() {
+        return infos;
     }
 
     @Override
