@@ -6,39 +6,41 @@
 package org.elasticsearch.xpack.sql.querydsl.query;
 
 import org.elasticsearch.common.Booleans;
+import org.elasticsearch.common.unit.Fuzziness;
 import org.elasticsearch.index.query.MatchQueryBuilder;
 import org.elasticsearch.index.query.Operator;
 import org.elasticsearch.index.query.QueryBuilder;
 import org.elasticsearch.index.query.QueryBuilders;
 import org.elasticsearch.xpack.sql.expression.predicate.fulltext.MatchQueryPredicate;
-import org.elasticsearch.xpack.sql.tree.Location;
+import org.elasticsearch.xpack.sql.tree.Source;
 
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
 import java.util.function.BiConsumer;
+
+import static java.util.Map.entry;
 
 public class MatchQuery extends LeafQuery {
 
     private static final Map<String, BiConsumer<MatchQueryBuilder, String>> BUILDER_APPLIERS;
 
     static {
-        HashMap<String, BiConsumer<MatchQueryBuilder, String>> appliers = new HashMap<>(11);
         // TODO: it'd be great if these could be constants instead of Strings, needs a core change to make the fields public first
         // TODO: add zero terms query support, I'm not sure the best way to parse it yet...
         // appliers.put("zero_terms_query", (qb, s) -> qb.zeroTermsQuery(s));
-        appliers.put("cutoff_frequency", (qb, s) -> qb.cutoffFrequency(Float.valueOf(s)));
-        appliers.put("lenient", (qb, s) -> qb.lenient(Booleans.parseBoolean(s)));
-        appliers.put("fuzzy_transpositions", (qb, s) -> qb.fuzzyTranspositions(Booleans.parseBoolean(s)));
-        appliers.put("fuzzy_rewrite", (qb, s) -> qb.fuzzyRewrite(s));
-        appliers.put("minimum_should_match", (qb, s) -> qb.minimumShouldMatch(s));
-        appliers.put("operator", (qb, s) -> qb.operator(Operator.fromString(s)));
-        appliers.put("max_expansions", (qb, s) -> qb.maxExpansions(Integer.valueOf(s)));
-        appliers.put("prefix_length", (qb, s) -> qb.prefixLength(Integer.valueOf(s)));
-        appliers.put("analyzer", (qb, s) -> qb.analyzer(s));
-        appliers.put("auto_generate_synonyms_phrase_query", (qb, s) -> qb.autoGenerateSynonymsPhraseQuery(Booleans.parseBoolean(s)));
-        BUILDER_APPLIERS = Collections.unmodifiableMap(appliers);
+        BUILDER_APPLIERS = Map.ofEntries(
+                entry("analyzer", MatchQueryBuilder::analyzer),
+                entry("auto_generate_synonyms_phrase_query", (qb, s) -> qb.autoGenerateSynonymsPhraseQuery(Booleans.parseBoolean(s))),
+                entry("cutoff_frequency", (qb, s) -> qb.cutoffFrequency(Float.valueOf(s))),
+                entry("fuzziness", (qb, s) -> qb.fuzziness(Fuzziness.fromString(s))),
+                entry("fuzzy_transpositions", (qb, s) -> qb.fuzzyTranspositions(Booleans.parseBoolean(s))),
+                entry("fuzzy_rewrite", MatchQueryBuilder::fuzzyRewrite),
+                entry("lenient", (qb, s) -> qb.lenient(Booleans.parseBoolean(s))),
+                entry("max_expansions", (qb, s) -> qb.maxExpansions(Integer.valueOf(s))),
+                entry("minimum_should_match", MatchQueryBuilder::minimumShouldMatch),
+                entry("operator", (qb, s) -> qb.operator(Operator.fromString(s))),
+                entry("prefix_length", (qb, s) -> qb.prefixLength(Integer.valueOf(s))));
     }
 
     private final String name;
@@ -47,12 +49,12 @@ public class MatchQuery extends LeafQuery {
     private final Map<String, String> options;
 
 
-    public MatchQuery(Location location, String name, Object text) {
-        this(location, name, text, null);
+    public MatchQuery(Source source, String name, Object text) {
+        this(source, name, text, null);
     }
 
-    public MatchQuery(Location location, String name, Object text, MatchQueryPredicate predicate) {
-        super(location);
+    public MatchQuery(Source source, String name, Object text, MatchQueryPredicate predicate) {
+        super(source);
         this.name = name;
         this.text = text;
         this.predicate = predicate;
